# Msc-Business-Analytics-Big-Data-Projects

./: README.md
Advanced Python/Bike Sharing Predictions/Team_6_model/: LICENSE  pyproject.toml
Advanced Python/Bike Sharing Predictions/Team_6_model/src/ie_bike_model/: __init__.py  model.py  util.py
Advanced Python/Flask API/: README.md  app.py
Analytics for Financial Services/: Santander Customer Prediction. ipynb
Artificial Intelligence/: Sexual Harassment Detection.ipynb
Data Vizualization/Group Assingment/: GroupH_R_script.Rmd
Forecasting Time Series/Group Assignment/: HW.R  Homework_1_DATA.csv
Forecasting Time Series/Individual Assignment/: Datos CO2.csv  Individual Assignment | R.R
Machine Learning/Deep Generative Adversarial Nets/: 02_dcgan_cifar10_GroupF.ipynb  03_cdcgan_fashion_mnist_GroupF.ipynb
Machine Learning/Image Classification | CONVOLUTIONAL NEURAL NETS/: 01_cnn_GroupF.ipynb  02_cnn_GroupF.ipynb  03_cnn_GroupF.ipynb  TransferLearning_flowers_inceptionV3_GroupF.ipynb  Yolov3_GroupF.ipynb
Machine Learning/Individual Assignment/: Individual Assignment_ Francisco Mengo de Abreu Fortes.ipynb
Machine Learning/Pump it Up Competition/: predictions_RandomForestClassifier_maxDepth20_maxFeatures9.csv
R- Programming/Solar Prediction/: 03_final_prediction_cluster_svm.csv
R- Programming/Solar Prediction/01_Script/: .Rhistory  (+3 more)
Risk & Fraud Analytics/Modelling Challenge/: Model Challenge | Francisco Fortes.ipynb  student_sub1.csv
Social Network Analysis/Gang Crime in London Social Network Analysis/: Group_H_SNA.Rmd  Group_H_SNA.html
(+22 files in other folders)
